[package]
name = "dyon"
version = "0.50.1"
edition = "2024"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["script", "scripting", "game", "language", "piston"]
description = "A rusty dynamically typed scripting language"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/dyon.git"
homepage = "https://github.com/pistondevelopers/dyon"
exclude = ["images/*", "data/*", "interactive/*", "meta/*", "source/*",
           "string/*", "tests/*"]

[dependencies]
piston_meta = "2.0.1"
range = "1.0.0"
read_color = "1.0.0"
read_token = "1.0.0"
lazy_static = "1.5.0"
vecmath = "1.0.0"
advancedresearch-tree_mem_sort = "0.2.0"
tokio = {version = "1.48.0", features = ["full"], optional = true}
futures-util = "0.3.31"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "dyon_benchmark"
harness = false

[target.'cfg(not(target_family = "wasm"))'.dependencies.reqwest]
version = "0.12.24"
default-features = false
optional = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.rand]
version = "0.9.2"
default-features = true
optional = true

[target.'cfg(target_family = "wasm")'.dependencies.rand]
version = "0.9.2"
default-features = false
optional = true

[features]
default = [
  "debug_lookup", "dynload", "file", "http", "stdio", "threading", "rand"
]
async = ["tokio"]
debug_lookup = []
dynload = []
file = []
http = ["reqwest"]
stdio = []
threading = []
